--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="groceries_done">Groceries done:</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_new_shopping_list">Add new shopping list</string>
+    <string name="name">Name</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+    <string name="quantity">Quantity</string>
+    <string name="add_new_item">Add new item</string>
 </resources>
