--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="cancel">Cancel</string>
     <string name="quantity">Quantity</string>
     <string name="add_new_item">Add new item</string>
+    <string name="quantity2">Quantity:</string>
 </resources>
